Fix spacing on main page

--- a/public/main.css
+++ b/public/main.css
@@ -76,3 +76,7 @@ p {
     font-weight: bold;
     font-style: italic;
 }
+
+#title-desc {
+    margin-bottom: 30px;
+}
